Avoid footer hiding under menu on smaller screens
Refs #933

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -55,5 +55,5 @@
 #footer {
   text-align: center;
   clear: both;
-  padding: 30px 10px 30px 10px;
+  padding: 30px 180px 30px 180px;
 }
